b=24413 fix for automake > 1.9.6
We seem to be using a Makefile variable that does not exist in more
recent versions of automake.  This fixes that problem.

Issue: LU-48
Change-Id: I84d0656e9bee0878c7ac25183476e39dca63366f

--- a/lustre/liblustre/Makefile.am
+++ b/lustre/liblustre/Makefile.am
@@ -50,8 +50,8 @@ install-exec-hook: liblustre.so
 	@list=$< ; for p in $$list; do \
 	  if test -f $$p; then \
 	    f="`echo $$p | sed -e 's|^.*/||'`"; \
-	    echo " $(libLIBRARIES_INSTALL) $$p $(DESTDIR)$(libdir)/$$f"; \
-	    $(libLIBRARIES_INSTALL) $$p $(DESTDIR)$(libdir)/$$f; \
+	    echo " $(INSTALL_DATA) $$p $(DESTDIR)$(libdir)/$$f"; \
+	    $(INSTALL_DATA) $$p $(DESTDIR)$(libdir)/$$f; \
 	  else :; fi; \
 	done
 else
