--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Brian J. Murrell <brian@interlinx.bc.ca>
 Uploaders: Brian J. Murrell <brian@interlinx.bc.ca>
 Standards-Version: 3.8.3
-Build-Depends: libreadline-dev, debhelper (>=5.0.0), dpatch, automake (>=1.7) | automake1.7 | automake1.8 | automake1.9, libsnmp-dev, bzip2, quilt, texlive-latex-recommended, linux-headers-generic | linux-headers, rsync
+Build-Depends: libreadline-dev, debhelper (>=5.0.0), dpatch, automake (>=1.7) | automake1.7 | automake1.8 | automake1.9, libsnmp-dev, bzip2, quilt, linux-headers-generic | linux-headers, rsync
 Homepage: http://www.lustre.org/
 Vcs-Cvs: -d :pserver:anonymous@cvs.lustre.org:/lustre
 
