b=24416 debian packaging fixes
- don't make a patch out of anything in /debian
- exclude noise files from the debian built source tarball
- fake debian/patche{s,d} for make dist

Issue: LU-51
Change-Id: I041aaef217e107def86ce808d0e96fc6891e1dcd

--- a/autoMakefile.am
+++ b/autoMakefile.am
@@ -51,3 +51,6 @@ module-dist-hook:
 	    echo -e "I have no idea how to create a META file in $(distdir).\nPlease file a bug at http://bugzilla.lustre.org/"; \
 	    exit 1; \
 	fi
+	if [ -d .git ]; then \
+		build/extract_patches $(distdir); \
+	fi
