b=24416 debian packaging fixes
- don't make a patch out of anything in /debian
- exclude noise files from the debian built source tarball
- fake debian/patche{s,d} for make dist
- a few more reasons to run autogen.sh
- figure out if dist tarball needs autogen.sh and include it if so
- look for and run autogen.sh in the build subdir
- make debdiff as part of make dist
- add a debian/source/format file
- mv the orig tarball and the debdiff to the debs dir

Issue: LU-51
Change-Id: I041aaef217e107def86ce808d0e96fc6891e1dcd

--- a/debian/rules
+++ b/debian/rules
@@ -89,8 +89,8 @@ autogen-stamp: patch-stamp
 	#  needed autogen.sh scripts
 	#  see https://bugzilla.lustre.org/attachment.cgi?id=27156
 	#  for an example)
-	if grep "^--- .*\/autoconf" debian/patches/*; then \
-		if [ ! -f autogen.sh ]; then \
+	if grep -e "^--- .*\/autoconf" -e ".*\/configure\.ac" -e ".*\/configure\.in" debian/patches/*; then \
+		if [ ! -f build/autogen.sh ]; then \
 			echo "You have patches which require autogen.sh to be run, but it doesn't exist"; \
 			echo "Please see https://bugzilla.lustre.org/attachment.cgi?id=27156"; \
 			exit 1; \
@@ -101,7 +101,7 @@ autogen-stamp: patch-stamp
 		cp /usr/share/misc/config.guess config.guess; \
 		cp /usr/share/misc/config.guess libsysio/config.guess; \
 		cp /usr/share/misc/config.guess ldiskfs/config.guess; \
-		sh ./autogen.sh; \
+		sh build/autogen.sh; \
 	fi; \
 	touch $@
 
