--- a/autoMakefile.am
+++ b/autoMakefile.am
@@ -13,7 +13,11 @@ endif
 
 include build/autoMakefile.am.toplevel
 
-EXTRA_DIST += config.h.in debian/*
+EXTRA_DIST += config.h.in
+
+if USES_DPKG
+EXTRA_DIST += debian/*
+endif
 
 if LDISKFS_ENABLED
 if !LDISKFS_IN_KERNEL
@@ -50,4 +54,16 @@ module-dist-hook:
 	else \
 	    echo -e "I have no idea how to create a META file in $(distdir).\nPlease file a bug at http://bugzilla.lustre.org/"; \
 	    exit 1; \
+	fi
+	if [ -d .git ]; then \
+		build/extract_patches $(distdir); \
+		if grep -e "^--- .*\/autoconf" -e "^--- .*\/Makefile\.am" -e ".*\/configure\.ac" -e ".*\/configure\.in" $(distdir)/debian/patches/*; then \
+			cp build/autogen.sh $(distdir)/build; \
+			cp libsysio/autogen.sh $(distdir)/libsysio; \
+			cp lustre-iokit/autogen.sh $(distdir)/lustre-iokit; \
+		fi; \
+		mkdir empty; \
+		diff -urN empty $(distdir)/debian > debian.diff; \
+		rm -rf $(distdir)/debian; \
+		rmdir empty; \
 	fi
