--- a/debian/rules
+++ b/debian/rules
@@ -89,7 +89,7 @@ autogen-stamp: patch-stamp
 	#  needed autogen.sh scripts
 	#  see https://bugzilla.lustre.org/attachment.cgi?id=27156
 	#  for an example)
-	if grep "^--- .*\/autoconf" debian/patches/*; then \
+	if grep -e "^--- .*\/autoconf" debian/patches/* -e "^--- .*\/Makefile\.am"; then \
 		if [ ! -f autogen.sh ]; then \
 			echo "You have patches which require autogen.sh to be run, but it doesn't exist"; \
 			echo "Please see https://bugzilla.lustre.org/attachment.cgi?id=27156"; \
