--- a/libsysio/configure.in
+++ b/libsysio/configure.in
@@ -12,7 +12,7 @@ case "$host_os" in
 	;;
 esac
 
-AM_INIT_AUTOMAKE([subdir-objects])
+AM_INIT_AUTOMAKE([subdir-objects 1.9 tar-ustar])
 AC_PROG_CC
 AM_PROG_CC_C_O
 
