Files and dirs missing in dist tarball.
Some files and dirs are missing in the "dist" tarball.

Change-Id: Id9fea606549174cac2ea1f7239d75f2fc63c144c
Signed-off-by: Brian J. Murrell <brian@whamcloud.com>

--- a/lnet/include/libcfs/Makefile.am
+++ b/lnet/include/libcfs/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS := linux
 if DARWIN
 SUBDIRS += darwin
 endif
-DIST_SUBDIRS := linux darwin
+DIST_SUBDIRS := linux darwin winnt
 
 EXTRA_DIST := curproc.h kp30.h libcfs.h list.h lltrace.h \
 	portals_utils.h types.h user-lock.h user-prim.h user-time.h \
