LU-85 Update some URLs and text to reflect our releases.
The text and URLs in the debian packaging metadata were old
(circa Sun Microsystems), so update them and take the opportunity
to inform about the source of the release being installed.

Signed-off-by: Brian J. Murrell <brian@whamcloud.com>
Change-Id: I23e87c0f093e4da208f4b66873ea9849fa62cc25

--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Depends: ${kpatch:Depends}
 Recommends: kernel-package, quilt
 Description: Linux kernel patch for the Lustre Filesystem
  Lustre is a scalable, secure, robust, highly-available
- cluster file system. It is maintained by Sun Microsystems, Inc.
- and available from http://www.lustre.org
+ cluster file system. This release is maintained by Whamcloud, Inc.
+ and available from http://wiki.whamcloud.com/
  .
  Lustre servers require a number of patches to the core Linux kernel,
  mostly to export new functions, add features to ext3, and add
@@ -35,8 +35,8 @@ Priority: optional
 Depends: module-assistant, bzip2, debhelper (>= 5.0.0), libsnmp-dev, dpatch
 Description: source for Lustre filesystem client kernel modules
  Lustre is a scalable, secure, robust, highly-available cluster file system.
- It is maintained by Sun Microsystems, Inc. and available from
- http://www.lustre.org
+ This release is maintained by Whamcloud, Inc. and available from
+ http://wiki.whamcloud.com/
  .
  This package contains the module source. The client kernel modules
  can be built for kernels from 2.6.18 - 2.6.26 from it using
@@ -49,8 +49,8 @@ Priority: optional
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Userspace utilities for the Lustre filesystem
  Lustre is a scalable, secure, robust, highly-available cluster file system.
- It is maintained by Sun Microsystems, Inc. and available from
- http://www.lustre.org
+ This release is maintained by Whamcloud, Inc. and available from
+ http://wiki.whamcloud.com/
  .
  This package provides a number of userspace utilities for
  maintaining Lustre filesystems.
@@ -62,8 +62,8 @@ Priority: optional
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Test suite for the Lustre filesystem
  Lustre is a scalable, secure, robust, highly-available cluster file system.
- It is maintained by Sun Microsystems, Inc. and available from 
- http://www.lustre.org
+ This release is maintained by Whamcloud, Inc. and available from 
+ http://wiki.whamcloud.com/
  .
  This package provides a number of test utilities for the Lustre filesystem.
 
@@ -74,8 +74,8 @@ Section: libs
 Depends: ${shlibs:Depends}
 Description: Runtime library for Lustre filesystem utilities
  Lustre is a scalable, secure, robust, highly-available cluster file system.
- It is maintained by Sun Microsystems, Inc. and available
- from http://www.lustre.org
+ This release is maintained by Whamcloud, Inc. and available
+ http://wiki.whamcloud.com/
  .
  This package provides a shared library that is used by userspace
  applications to  work with Lustre filesystems. It gives a user application
@@ -88,7 +88,6 @@ Description: Runtime library for Lustre filesystem utilities
  Currently, liblustre is still under development and only works on Linux
  (i386 & x86_64, not tested on ia64).
  .
- Please see https://mail.clusterfs.com/wikis/lustre/LibLustreHowTo for details.
 
 Package: lustre-dev
 Section: libdevel
@@ -97,7 +96,7 @@ Architecture: i386 powerpc amd64 ia64
 Depends: lustre-utils (= ${binary:Version})
 Description: Development files for the Lustre filesystem
  Lustre is a scalable, secure, robust, highly-available cluster file system.
- It is maintained by Sun Microsystems, Inc. and available from
- http://www.lustre.org
+ This release is maintained by Whamcloud, Inc. and available from
+ http://wiki.whamcloud.com/
  .
  This package provides development libraries for the Lustre filesystem.
