LU-97 lustre-modules should depend on ldiskfs.
Only for the server of course.
But depend on a generically named tag, and have ldiskfs provide
that tag so that any future backing stores can be used as a
replacement for ldiskfs.

Signed-off-by: Brian J. Murrell <brian@whamcloud.com>
Change-Id: Ibef2b8c2b2a8c7339143dc32d32b59ace94f00fd

--- a/ldiskfs/lustre-ldiskfs.spec.in
+++ b/ldiskfs/lustre-ldiskfs.spec.in
@@ -26,6 +26,7 @@ Source: lustre-ldiskfs-%{version}.tar.gz
 URL: http://www.sun.com/software/products/lustre/index.xml
 BuildRoot: %{_tmppath}/lustre-ldiskfs-%{version}-root
 Requires: modutils >= 2.4.10, ldiskfsprogs >= 1.41.12.2.ora1
+Provides: lustre-backend-fs
 
 %description
 Provides the ldiskfs backend file system kernel module, used by
