Add support for test groups.
Added an -g GROUP_FILE option to auster. The tests listed in the
group file will be used instead of any passed on the command line. I also added
a couple of test-groups to get things started, although
I'm sure we'll want to refine these.

Took care of a few cleanups in run_suite as well.

Issue: LU-103
Signed-off-by: Robert Read <rread@whamcloud.com>
Change-Id: I5000c2b95a6eb1a49f5305637d4b55de5edc6d5c

--- a/lustre/tests/Makefile.am
+++ b/lustre/tests/Makefile.am
@@ -27,6 +27,7 @@ noinst_SCRIPTS += lustre-rsync-test.sh ost-pools.sh rpc.sh yaml.sh liblustre.sh
 noinst_SCRIPTS += lnet-selftest.sh obdfilter-survey.sh mmp.sh
 noinst_SCRIPTS += sgpdd-survey.sh maloo_upload.sh auster
 nobase_noinst_SCRIPTS = cfg/local.sh
+nobase_noinst_SCRIPTS += test-groups/regression test-groups/regression-mpi
 nobase_noinst_SCRIPTS += acl/make-tree acl/run cfg/ncli.sh
 nobase_noinst_SCRIPTS += racer/dir_create.sh racer/file_create.sh racer/file_list.sh
 nobase_noinst_SCRIPTS += racer/file_rm.sh racer/racer.sh racer/file_concat.sh
