LU73 ldiskfs patch for RHEL6
This patch is required for server part on RHEL6 kernel (2.6.32).
It consists in ldiskfs patches.

It was sent by Kalpal by email, it is a slight improvment of
attachment https://bugzilla.lustre.org/attachment.cgi?id=30186
from bz#22375.

Change-Id: I1ceec3a34e81a809f7ea110db7e1cdd393e1a0c7
Signed-off-by: Bobi Jam <bobijam@whamcloud.com>

--- a/ldiskfs/ldiskfs/Makefile.in
+++ b/ldiskfs/ldiskfs/Makefile.in
@@ -7,6 +7,7 @@ backfs_extra := $(wildcard @LINUX@/fs/@BACKFS@/Makefile)
 
 backfs_headers := $(wildcard @LINUX@/fs/@BACKFS@/*.h)
 linux_headers := $(wildcard @LINUX@/include/linux/@BACKFS@*.h)
+trace_headers := $(wildcard @LINUX@/include/trace/events/@BACKFS@*.h)
 
 backfs_sources := $(filter-out %.mod.c,$(wildcard @LINUX@/fs/@BACKFS@/*.c))
 
