LU-50 pdirops patch for ldiskfs
- pdirops support for ldiskfs
- N-level htree
- integrate with osd-ldiskfs
- patch for rhel-6 is not here, though it's easy to port it to 2.6.32 since
  most changes are new code for htree_lock

Change-Id: I269c0e3112e68f3acd79e860dab052a68c7d7aaa
Signed-off-by: Liang Zhen <liang@whamcloud.com>

--- a/ldiskfs/ldiskfs/autoMakefile.am
+++ b/ldiskfs/ldiskfs/autoMakefile.am
@@ -75,7 +75,9 @@ endif
 	sed $(strip $(ldiskfs_sed_flags)) \
         linux-stage/include/linux/dynlocks.h \
         > linux/dynlocks.h
-
+	sed $(strip $(ldiskfs_sed_flags)) \
+        linux-stage/include/linux/htree_lock.h \
+        > linux/htree_lock.h
 
 	@echo
 	touch sources
