--- a/libcfs/libcfs/autoMakefile.am
+++ b/libcfs/libcfs/autoMakefile.am
@@ -89,6 +89,6 @@ install-data-hook: $(install_data_hook)
 EXTRA_DIST := Info.plist
 
 MOSTLYCLEANFILES := @MOSTLYCLEANFILES@ linux-*.c linux/*.o darwin/*.o libcfs
-DIST_SOURCES := $(libcfs-all-objs:%.o=%.c) tracefile.h user-prim.c prng.c \
-      user-lock.c user-tcpip.c user-bitops.c workitem.c \
-      user-mem.c kernel_user_comm.c linux/linux-tracefile.h
+DIST_SOURCES := $(libcfs-all-objs:%.o=%.c) tracefile.h prng.c \
+      user-lock.c user-tcpip.c user-bitops.c user-prim.c workitem.c \
+      user-mem.c kernel_user_comm.c fail.c linux/linux-tracefile.h
