LU-227 External lustre-ldiskfs package integration
Add a configure option --with-ldiskfs-devel to build Lustre against the
externally maintained lustre-ldiskfs package. This external package maintains
ldiskfs as a standalone codebase, completely separate from Lustre source tree.
The intent is to eventually have a clear distinction between the Lustre package
and the package Lustre uses for it's underlying disk format.

Signed-off-by: Ned Bass <bass6@llnl.gov>
Signed-off-by: Prakash Surya <surya1@llnl.gov>
Change-Id: Iaa17d0483e155439c8de206af81f19a321bbeaa1

--- a/lustre/lvfs/Makefile.in
+++ b/lustre/lvfs/Makefile.in
@@ -18,6 +18,6 @@ EXTRA_DIST = $(lvfs-objs:.o=.c)  $(quotafmt-objs:.o=.c) \
 	lustre_quota_fmt.c lustre_quota_fmt.h quotafmt_test.c
 
 # for <ext3/xattr.h> on 2.6
-EXTRA_PRE_CFLAGS := -I@LINUX@/fs -I@LDISKFS_DIR@ -I@LDISKFS_DIR@/ldiskfs
+EXTRA_PRE_CFLAGS := -I@LINUX@/fs -I@LDISKFS_DIR@ -I@LDISKFS_DIR@/ldiskfs -I@LDISKFS_DIR@/include
 
 @INCLUDE_RULES@
