--- a/autoMakefile.am
+++ b/autoMakefile.am
@@ -20,11 +20,29 @@ EXTRA_DIST += debian/*
 endif
 
 if LDISKFS_ENABLED
+if LDISKFS_DEVEL
+@SYMVERFILE@:
+	touch @SYMVERFILE@
+	-grep -v ldiskfs @SYMVERFILE@ > @SYMVERFILE@.old
+	cat @SYMVERFILE@.old > @SYMVERFILE@
+	@if [ -f @LDISKFS_DIR@/@SYMVERFILE@ ]; then \
+		cat @LDISKFS_DIR@/@SYMVERFILE@ >>@SYMVERFILE@; \
+	elif [ -f @LDISKFS_DIR@/ldiskfs/@SYMVERFILE@ ]; then \
+		cat @LDISKFS_DIR@/ldiskfs/@SYMVERFILE@ >>@SYMVERFILE@; \
+	else \
+		echo -e "\n" \
+		"*** Missing ldiskfs symbols. Ensure you have built ldiskfs:\n" \
+		"*** - @LDISKFS_OBJ@/@SYMVERFILE@, or\n" \
+		"*** - @LDISKFS_OBJ@/ldiskfs/@SYMVERFILE@\n"; \
+		exit 1; \
+	fi
+else
 if !LDISKFS_IN_KERNEL
 @SYMVERFILE@: @LDISKFS_DIR@/@SYMVERFILE@
 	touch @SYMVERFILE@
 	-grep -v ldiskfs @SYMVERFILE@ > @SYMVERFILE@.old
 	cat @SYMVERFILE@.old @LDISKFS_DIR@/@SYMVERFILE@ > @SYMVERFILE@
+endif
 endif
 endif
 
