LU-257 s/%krequires/%kversion/g
There is no %krequires in the lustre.spec.in anymore after it was
removed due to being redundant (and unused) after bug 22281 was
landed.

Signed-off-by: Brian J. Murrell <brian@whamcloud.com>
Change-Id: If27667f66e4b4d44845fb70d375699fead7da7e0

--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -73,9 +73,9 @@ Summary: Kernel Lustre modules for Linux %{kversion}
 Requires: kernel-%{flavor}
 %else
 %if %{_vendor}=="redhat" || %{_vendor}=="fedora"
-# for RHEL we need to require the specific kernel still since weak-modules support on RH
-# is, well, weak, to be punny about it
-Requires: kernel = %{krequires}
+# for RHEL we need to require the specific kernel still since weak-modules
+# support on RH is, well, weak, to be punny about it
+Requires: kernel = %{kversion}
 %endif
 %endif
 %if ! %{is_client}
