--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -75,7 +75,7 @@ Requires: kernel-%{flavor}
 %if %{_vendor}=="redhat" || %{_vendor}=="fedora"
 # for RHEL we need to require the specific kernel still since weak-modules support on RH
 # is, well, weak, to be punny about it
-Requires: kernel = %{krequires}
+Requires: kernel = %{kversion}
 %endif
 %endif
 %if ! %{is_client}
