LU-281 Autoconf improvements and rpm generation fixes
For the autoconf system you can over ride the defaults where the
software stack will be installed on an given system image. For
lustre this is not completely true. This patch always you to
define the location where the kernel modules and mount.lustre
can be. Also another issue addressed is the case where many
distros pull in extra dependencies that are not needed when
a rpm is generated. Those extra dependencies might not exist
in a system image. AutoReqProv can suppress this.

Change-Id: I49e8b3b9fcd8edc52f93075032da96e248b1056f
Signed-off-by: James Simmons <uja.ornl@gmail.com>

--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -20,6 +20,8 @@
 %{!?lustre_name: %define lustre_name lustre}
 %{!?build_lustre_tests: %define build_lustre_tests 1}
 
+AutoReqProv: no
+
 # in order to get kernel symset and/or kernel module dependencies into
 # the RPM, in order to support weak-modules, the internal dependency gen-
 # erator needs to be disabled
