--- a/ldiskfs/ldiskfs/Makefile.in
+++ b/ldiskfs/ldiskfs/Makefile.in
@@ -14,7 +14,7 @@ backfs_sources := $(filter-out %.mod.c,$(wildcard @LINUX@/fs/@BACKFS@/*.c))
 ext3_new_sources := iopen.c iopen.h extents.c mballoc.c group.h dynlocks.c fiemap.h
 ext3_new_headers := ext3_extents.h
 
-ext4_new_sources := iopen.c iopen.h  dynlocks.c fiemap.h
+ext4_new_sources := iopen.c iopen.h  dynlocks.c mmp.c fiemap.h
 ext4_new_headers :=
 
 new_sources := $(@BACKFS@_new_sources)
