TT-121 build Lustre with OFED 1.5.3.1
Build OFED 1.5.3.1 driver for Lustre.

Signed-off-by: Yu Jian <yujian@whamcloud.com>
Change-Id: I378f01fa794ba6b0039686b6dfd005e314a5fb85

--- a/lustre/kernel_patches/targets/2.6-rhel5.target.in
+++ b/lustre/kernel_patches/targets/2.6-rhel5.target.in
@@ -6,7 +6,7 @@ SERIES=2.6-rhel5.series
 EXTRA_VERSION=${lnxrel}_lustre.@VERSION@
 LUSTRE_VERSION=@VERSION@
 
-OFED_VERSION=inkernel
+OFED_VERSION=1.5.3.1
 RDAC_VERSION="09.03.0C02.0013"
 MPTLINUX_VERSION="4.18.20.04"
 
