LU-384 land bz22281 on b1_8
To facilitate distinctive naming, we need the work in bugzilla
22281 landed on b1_8.
Add an lbuild option to set the downstream-release.  Normally
this should not be exposed to/through lbuild as this was orig-
inally intended for downstream packages to add their own stamp
to the release string.

Include e4189c54470deff4a98f0b2bb03ac6be7ed85ce9:
    b=24095 don't really need configure --with-linux

    Don't really need to have run configure --with-linux for
    version-tag.pl to work.

    i=wangyb
    i=cliff

Expand the list of debian/* files that should be included in the
dist tarball.
Don't try to [un]patch the local-env.sh.  It should never really
be included in a landed patch.

Include most of 086ff8c46009479bfdac9f570331a6c93b7d52ac:

    b=24094 add kver; update kdir, kobjdir

    Add a new macro to allow the caller to simply define which kernel
    he wants to build for.
    Refactor the kdir and kobjdir to function more properly.
    Remove krequires.  Nothing is using it anymore.

    i=wangyb
    i=cliff

Include c1a61e3e9129d0e2062eed617d922e6dfa9ede5a:

    LU-284 strip .$arch off of kern vers for requires

    RHEL6 appends .arch to the end of the version in the utsrelease.h file.
    The kernel RPM however provides that value with the .arch stripped off,
    so do the same stripping in the lustre-modules RPM for it's Requires:.

    Signed-off-by: Brian J. Murrell <brian@whamcloud.com>
    Change-Id: Ib6ff32c006f184edceb5d667b649bb106d503faf
    Reviewed-on: http://review.whamcloud.com/502
    Reviewed-by: Oleg Drokin <green@whamcloud.com>
    Tested-by: Hudson
    Reviewed-by: Andreas Dilger <adilger@whamcloud.com>

Signed-off-by: Brian J. Murrell <brian@whamcloud.com>
Change-Id: I82f4f9a556fd1d1fc51ef8930e2017798ff88706

--- a/autoMakefile.am
+++ b/autoMakefile.am
@@ -16,7 +16,18 @@ include build/autoMakefile.am.toplevel
 EXTRA_DIST += config.h.in
 
 if USES_DPKG
-EXTRA_DIST += debian/*
+EXTRA_DIST += debian/control.modules.in debian/control.main \
+	      debian/linux-patch-lustre.kpatches \
+	      debian/lustre-utils.examples debian/copyright debian/source \
+	      debian/source/format debian/lustre-source.docs \
+	      debian/lustre-utils.docs debian/lustre-utils.manpages \
+	      debian/lustre-client-modules.install debian/README.Debian \
+	      debian/.gitignore debian/linux-patch-lustre.dirs \
+	      debian/linux-patch-lustre.unpatch debian/lustre-dev.install \
+	      debian/lustre-source.dirs debian/liblustre.install debian/rules \
+	      debian/lustre-dev.dirs debian/linux-patch-lustre.apply \
+	      debian/control debian/changelog debian/lustre-tests.install \
+	      debian/lustre-utils.install
 endif
 
 if LDISKFS_ENABLED
@@ -46,11 +57,14 @@ checkstack-clean:
 
 module-dist-hook:
 	if [ -d CVS -o -d .git ]; then \
-	    perl lustre/scripts/tree_status.pl > $(distdir)/tree_status; \
-	elif [ -f tree_status ]; then \
-	    cp tree_status $(distdir)/tree_status; \
+	    perl lustre/scripts/make_META.pl > $(distdir)/META; \
+	    cp $(distdir)/META $(distdir)/ldiskfs/META; \
+	elif [ -f META ]; then \
+	    cp META $(distdir)/META; \
+	    cp $(distdir)/META $(distdir)/ldiskfs/META; \
 	else \
-	    echo -e "I have no idea how to create a tree_status file in $(distdir).\nPlease file a bug at http://bugzilla.lustre.org/"; \
+	    echo -e "I have no idea how to create a META file in $(distdir).\nPlease file a bug at http://bugzilla.lustre.org/"; \
+	    exit 1; \
 	fi
 	if [ -d .git ]; then \
 		build/extract_patches $(distdir); \
