--- a/lustre/kernel_patches/kernel_configs/kernel-2.6.32-2.6-rhel6-x86_64.config
+++ b/lustre/kernel_patches/kernel_configs/kernel-2.6.32-2.6-rhel6-x86_64.config
@@ -4022,6 +4022,9 @@ CONFIG_NLS_KOI8_U=m
 CONFIG_NLS_UTF8=m
 CONFIG_DLM=m
 CONFIG_DLM_DEBUG=y
+# CONFIG_BH_LRU_SIZE_8 is not set
+CONFIG_BH_LRU_SIZE_16=y
+# CONFIG_BH_LRU_SIZE_32 is not set
 
 #
 # Kernel hacking
