--- a/libcfs/libcfs/Makefile.in
+++ b/libcfs/libcfs/Makefile.in
@@ -26,7 +26,7 @@ endif
 
 libcfs-all-objs := debug.o fail.o nidstrings.o lwt.o module.o tracefile.o watchdog.o \
 		libcfs_string.o hash.o kernel_user_comm.o prng.o workitem.o \
-		upcall_cache.o
+		upcall_cache.o heap.o
 
 libcfs-objs := $(libcfs-linux-objs) $(libcfs-all-objs)
 
