--- a/libcfs/libcfs/autoMakefile.am
+++ b/libcfs/libcfs/autoMakefile.am
@@ -44,7 +44,7 @@ if LIBLUSTRE
 noinst_LIBRARIES= libcfs.a
 libcfs_a_SOURCES= posix/posix-debug.c user-prim.c user-lock.c user-tcpip.c \
                   prng.c user-bitops.c user-mem.c hash.c kernel_user_comm.c \
-                  workitem.c fail.c
+                  workitem.c fail.c heap.c
 libcfs_a_CPPFLAGS = $(LLCPPFLAGS)
 libcfs_a_CFLAGS = $(LLCFLAGS)
 endif
@@ -70,7 +70,7 @@ nodist_libcfs_SOURCES := darwin/darwin-sync.c darwin/darwin-mem.c	\
 	darwin/darwin-debug.c darwin/darwin-proc.c 			\
 	darwin/darwin-tracefile.c darwin/darwin-module.c 		\
 	posix/posix-debug.c module.c tracefile.c nidstrings.c watchdog.c \
-	kernel_user_comm.c hash.c
+	kernel_user_comm.c hash.c heap.c
 
 libcfs_CFLAGS := $(EXTRA_KCFLAGS)
 libcfs_LDFLAGS := $(EXTRA_KLDFLAGS)
@@ -90,5 +90,5 @@ EXTRA_DIST := Info.plist
 
 MOSTLYCLEANFILES := @MOSTLYCLEANFILES@ linux-*.c linux/*.o darwin/*.o libcfs
 DIST_SOURCES := $(libcfs-all-objs:%.o=%.c) tracefile.h prng.c \
-      user-lock.c user-tcpip.c user-bitops.c user-prim.c workitem.c \
+      user-lock.c user-tcpip.c user-bitops.c user-prim.c workitem.c heap.c \
       user-mem.c kernel_user_comm.c fail.c linux/linux-tracefile.h
