--- a/libcfs/include/libcfs/posix/Makefile.am
+++ b/libcfs/include/libcfs/posix/Makefile.am
@@ -1,1 +1,7 @@
+libcfsdir = $(includedir)/libcfs
+
+if UTILS
+libcfs_HEADERS = posix-types.h
+endif
+
 EXTRA_DIST := libcfs.h posix-wordsize.h posix-types.h
