LU-000 build: skip generated files in .gitignore
Skip files automatically generated during builds on FC-13.

Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Change-Id: I1cff9a351137145bb87a89460d0a1b54fae29e2c

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,12 @@
 *.[oasi]
 *.so
 *~
+*.dSYM
 *.swp
+*.orig
+*.rej
+*.unsigned
+modules.order
 .DS_Store
 
 #
@@ -56,7 +61,6 @@
 /Module.markers
 /Module.symvers
 /Module.symvers.old
-/modules.order
 /Modules.symvers
 /patches
 /Rules
