ofd: osd api based replacement for obdfilter
under construction ...

Change-Id: I903c2f50b55cbc128d59bfb9886b5f8660fe2831
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>

--- a/lustre/Makefile.in
+++ b/lustre/Makefile.in
@@ -8,6 +8,7 @@ subdir-m += obdecho
 subdir-m += mgc
 subdir-m += quota
 
+@SERVER_TRUE@subdir-m += mds obdfilter ost mgs mdt cmm mdd osd-ldiskfs ofd
 @SERVER_TRUE@subdir-m += mds obdfilter ost mgs mdt cmm mdd osd-ldiskfs
 @CLIENT_TRUE@subdir-m += mdc lmv llite fld
 
