LU-633 iokit: mdt-survey script for MD echo client test
Create a mdt-survey script to run echo client for MD

Signed-off-by: Minh Diep <mdiep@whamcloud.com>
Change-Id: I2d75de5c28b70a3b8474ed8512389d850c77e638

--- a/lustre-iokit/configure.ac
+++ b/lustre-iokit/configure.ac
@@ -13,5 +13,6 @@ sgpdd-survey/Makefile
 obdfilter-survey/Makefile
 ost-survey/Makefile
 ior-survey/Makefile
+mdt-survey/Makefile
 stats-collect/Makefile
 )
